--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -358,7 +358,7 @@ mcMMO.MOTD=[[BLUE]]Este servidor est\u00e1 utilizando mcMMO {0}! \nEscriba [[YEL
 mcMMO.NoInvites=[[RED]]No tienes invitaciones en este momento
 mcMMO.NoPermission=[[DARK_RED]]Permisos insuficientes.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Si no tienes acceso a una habilidad no ser\u00e1 mostrada aqu\u00ed.
-mcMMO.Wiki=[[BLUE]]Wiki de mcMMO - [[GREEN]]http://www.mcmmo.org/wiki/
+mcMMO.Website=[[GREEN]]http://forums.mcmmo.info[[BLUE]] - mcMMO Website
 Commands.Party.InParty=[[GREEN]]Grupo: {0}
 Party.Forbidden=[mcMMO] No se permiten grupos en este mundo (Ver permisos)
 Party.Help.0=[[RED]]El uso correcto es \'/party <nombre del grupo>\' para unirse o \'/party q\' para salir
