--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -358,7 +358,7 @@ mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0}! \n Type [[YELLOW]]/mcmmo[[B
 mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Permessi insufficienti.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don\'t have access to a skill it will not be shown here.
-mcMMO.Wiki=[[GREEN]]http://www.mcmmo.org/wiki/[[BLUE]] - mcMMO Wiki
+mcMMO.Website=[[GREEN]]http://forums.mcmmo.info[[BLUE]] - mcMMO Website
 Commands.Party.InParty=[[GREEN]]Compagnia: {0}
 Party.Forbidden=[mcMMO] I party non sono permessi in questo mondo (Controlla i Permessi)
 Party.Help.0=[[RED]]Proper usage is /party <party-name> to join or /party q to quit
