--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -358,7 +358,7 @@ mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0}! \n Type [[YELLOW]]/mcmmo[[B
 mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don\'t have access to a skill it will not be shown here.
-mcMMO.Wiki=[[GREEN]]http://www.mcmmo.org/wiki/[[BLUE]] - mcMMO Wiki
+mcMMO.Website=[[GREEN]]http://forums.mcmmo.info[[BLUE]] - mcMMO Website
 Commands.Party.InParty=[[GREEN]]\u0413\u0440\u0443\u043f\u043f\u0430: {0}
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
 Party.Help.0=[[RED]]\u0427\u0442\u043e\u0431\u044b \u043f\u0440\u0438\u0441\u043e\u0435\u0434\u0435\u043d\u0438\u0442\u044c\u0441\u044f \u043a \u0433\u0440\u0443\u043f\u043f\u0435 \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u0443\u0439\u0442\u0435 /party <party-name> \u0438\u043b\u0438 /party q, \u0447\u0442\u043e\u0431\u044b \u0432\u044b\u0439\u0442\u0438 \u0438\u0437 \u043d\u0435\u0435
