--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Key:
   - Removal
 
 Version 1.3.07
+ + Added ability to gain XP from custom blocks. Enable custom blocks in the config file, then enter the data in the blocks.yml file.
  + Added ability to gain XP with custom tools. Enable custom tools in the config file, then enter the data in the tools.yml file.
  + Added ability to repair custom tools. Enable custom tools in the config file, then enter the data in the tools.yml file.
  + Added ability to repair custom armor. Enable custom armor in the config file, then enter the data in the armor.yml file.
