--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,6 +24,7 @@ Version 1.3.07
  + Added config options for enabling/disabling specific double drops
  + Added automatic zip backup of flatfile database & config files
  + Added config options to enable/disable specific skills for PVP & PVE
+ = Fixed bug where Tree Feller was looking at the wrong blocks for determining how much to take down.
  = Fixed bug where Green Terra consumed seeds even on Mossy Stone Brick
  = Fixed bug where the client didn't reflect the Stone Brick to Mossy Stone Brick change
  = Fixed bug where an arrow could bounce off entities on daze proc
@@ -40,6 +41,7 @@ Version 1.3.07
  = Fixed some bypass nodes defaulting true for Ops
  = Fixed bug with trying to use Chimera Wing while standing on a half-block
  = Fixed duplication bug when a placed block was mined after a server restart
+ = Fixed exploit where shooting yourself with an arrow gave Archery XP
  ! Changed the mcMMO motd to link to the new website rather than the wiki
  ! Changed bleeding ticks damage to 1 from 2
  ! Changed Mining to ignore blocks when the pick is enchanted with Silk Touch
@@ -48,7 +50,6 @@ Version 1.3.07
  ! Changed the permission node for Blast Mining detonation to mcmmo.ability.blastmining.detonate (was mcmmo.skills.blastmining) for the sake of consistency
  ! Changed skill commands to only display what you have permissions for
  ! Changed mcMMO to use a new storage system for player placed blocks
- - Removed the experience granted when an arrow strikes its shooter
  - Removed some unused permission nodes
  - Removed a few config options in favor of permissions nodes (Hunger Bonus, Armor/Tool Repair, Instant Wheat Regrowth)
  - Removed level requirement for repairing string tools from the config file
