Getting ready for promotions in this good economy

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -354,11 +354,11 @@ Commands.SkillInfo=/<skill> [[RED]]- View detailed information about a skill
 Commands.Stats.Self=YOUR STATS
 Commands.Stats=[[RED]]- View your mcMMO stats
 Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
-mcMMO.MOTD=[[BLUE]]Tento server pouz\u00edv\u00e1 mcMMO {0}! \n Napis [[YELLOW]]/mcmmo[[BLUE]] pro pomoc.
+mcMMO.MOTD=[[BLUE]]Server is running [[GOLD]]mcMMO {0}
 mcMMO.NoInvites=[[RED]]Momentalne nemas zadne pozvanky
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Pokud nemas pristup k schopnosti, nebude zobrazena.
-mcMMO.Website=[[GREEN]]http://forums.mcmmo.info[[BLUE]] - mcMMO Website
+mcMMO.Website=[[GOLD]]http://forums.mcmmo.info [[GREEN]]- [[GOLD]]mcMMO Website
 Commands.Party.InParty=[[GREEN]]Party: {0}
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
 Party.Help.0=[[RED]]Spr\u00e1vn\u00e9 pouzit\u00ed je /party <party-jmeno> pro pripojen\u00ed nebo /party q pro opusten\u00ed
